--- a/a1/index.html
+++ b/a1/index.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:fb="http://ogp.me/ns/fb#">
 <head>
-    <meta property="og:image" content="https://supercauli.github.io/connectpuzzle/img/previewImg.png" />
+    <meta property="og:image" content="https://supercauli.github.io/test/a1/icon.png" />
 </head>
 <body>
 <script>
