--- a/a2/index.html
+++ b/a2/index.html
@@ -2,7 +2,7 @@
       xmlns:fb="http://ogp.me/ns/fb#">
 <head>
     <meta property="og:image" content="https://supercauli.github.io/test/img/icon.png" />
-	<meta property="og:title" content="Connect Puzzle" />
+	<meta property="og:title" content="Connect Puzzle - Connect Puzzle" />
 </head>
 <body>
 <script>
